[gd_scene load_steps=33 format=2]

[ext_resource path="res://Tree.gd" type="Script" id=1]
[ext_resource path="res://Assets/Plants/trees/water_tree.png" type="Texture" id=2]
[ext_resource path="res://Assets/Plants/trees/magma_tree.png" type="Texture" id=3]
[ext_resource path="res://Assets/Plants/trees/earth_tree.png" type="Texture" id=4]
[ext_resource path="res://Assets/Plants/trees/fire_tree.png" type="Texture" id=5]
[ext_resource path="res://Assets/Plants/trees/air_tree.png" type="Texture" id=6]
[ext_resource path="res://Assets/Plants/trees/snoop_dogg_tree.png" type="Texture" id=7]
[ext_resource path="res://Assets/Plants/saplings/air_sapling.png" type="Texture" id=8]
[ext_resource path="res://Assets/Plants/saplings/fire_sapling.png" type="Texture" id=9]
[ext_resource path="res://Assets/Plants/saplings/magma_sapling.png" type="Texture" id=10]
[ext_resource path="res://Assets/Plants/saplings/snoop_dogg_sapling.png" type="Texture" id=11]
[ext_resource path="res://Assets/Plants/saplings/earth_sapling.png" type="Texture" id=12]
[ext_resource path="res://Assets/Plants/saplings/water_sapling.png" type="Texture" id=13]
[ext_resource path="res://Assets/Plants/trees/dead_tree.png" type="Texture" id=14]
[ext_resource path="res://Assets/Plants/trees/bunny_tree.png" type="Texture" id=15]
[ext_resource path="res://Assets/Plants/trees/lightning_tree.png" type="Texture" id=16]
[ext_resource path="res://Assets/Plants/saplings/lightning_sapling.png" type="Texture" id=17]
[ext_resource path="res://Assets/Plants/saplings/dead_sapling.png" type="Texture" id=18]
[ext_resource path="res://Assets/Plants/saplings/bunny_sapling.png" type="Texture" id=19]
[ext_resource path="res://Assets/Plants/saplings/cotton_candy_sapling.png" type="Texture" id=20]
[ext_resource path="res://Assets/Plants/trees/cotton_candy_tree.png" type="Texture" id=21]
[ext_resource path="res://Assets/Plants/trees/sand_tree.png" type="Texture" id=22]
[ext_resource path="res://Assets/Plants/saplings/sand_sapling.png" type="Texture" id=23]
[ext_resource path="res://Assets/Plants/saplings/bubble_sapling.png" type="Texture" id=24]
[ext_resource path="res://Assets/Plants/trees/bubble_tree.png" type="Texture" id=25]
[ext_resource path="res://Assets/Plants/saplings/tree_sapling.png" type="Texture" id=26]
[ext_resource path="res://Assets/Plants/trees/tree_tree.png" type="Texture" id=27]
[ext_resource path="res://Assets/HUD/health_over_2.png" type="Texture" id=28]
[ext_resource path="res://WaterIndicator.tscn" type="PackedScene" id=29]
[ext_resource path="res://Assets/HUD/health_color_2.png" type="Texture" id=30]
[ext_resource path="res://Assets/HUD/health_under_2.png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 14 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 2 ) ],
"loop": true,
"name": "water",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "tree",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 22 ) ],
"loop": true,
"name": "sand",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 3 ) ],
"loop": true,
"name": "magma",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "air",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "cottoncandy",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 4 ) ],
"loop": true,
"name": "earth",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 5 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 16 ) ],
"loop": true,
"name": "lightning",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 15 ) ],
"loop": true,
"name": "bunny",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 7 ) ],
"loop": true,
"name": "snoop",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "bubble",
"speed": 5.0
} ]

[node name="Tree" type="Area2D" groups=[
"trees",
]]
script = ExtResource( 1 )

[node name="healthDeduction" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "tree"

[node name="TreeStats" type="CanvasLayer" parent="."]

[node name="TreeStatPanel" type="Panel" parent="TreeStats"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="Control" parent="TreeStats"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="TreeStats/HealthBar"]
margin_right = 97.0
margin_bottom = 96.0
value = 100.0
texture_under = ExtResource( 31 )
texture_over = ExtResource( 28 )
texture_progress = ExtResource( 30 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterIndicator" parent="TreeStats" instance=ExtResource( 29 )]
margin_left = -1.5
margin_top = -3.5
margin_right = -1.5
margin_bottom = -3.5

[node name="TreeHealth" type="Label" parent="TreeStats"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreeName" type="Label" parent="TreeStats"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreeWaterStatus" type="Label" parent="TreeStats"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreeSpecialProperties" type="Label" parent="TreeStats"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreeMaturityStatus" type="Label" parent="TreeStats"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreeDeathStatus" type="Label" parent="TreeStats"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreeSunlight" type="Label" parent="TreeStats"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="healthDeduction" to="." method="_on_healthDeduction_timeout"]
